--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,10 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      php: 7.3
+        php: 7.3
   build:
     commands:
+      - php --version
       - php artisan serve
 
 artifacts:
